--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1162,3 +1162,7 @@ h5, .h5 {
 .contact-us .form-control:focus {
   border-color: #f4503b !important;
 }
+// jcrop style
+.jcrop-keymgr{
+  margin-left: -10000px !important;
+}
