--- a/app/views/shared/_profile_image_crop.html.erb
+++ b/app/views/shared/_profile_image_crop.html.erb
@@ -4,12 +4,24 @@
         width: 60%;
         height: auto;
     }
-        .image-field{
-            margin-top: 10px;
+    @media (max-width: 767px) {
+        #profile_image_edit_modal .modal-dialog{
+            width: 95%;
         }
+        #profile_image_edit_modal .modal-body{
+            padding-left: 5px;
+            padding-right: 5px;
+        }
+    }
+    .image-field{
+        margin-top: 10px;
+    }
     #profile_image_edit_modal .modal-footer{
         padding: 15px 0;
     }
+
+
+
 </style>
 <div id="profile_image_edit_modal" class="modal fade">
   <div class="modal-dialog">
@@ -36,7 +48,7 @@
                 <%= hidden_field_tag attribute, '', :id => "#{attribute}_crop" %>
             <% end %>
 
-            <div class="field image-field">
+            <div class="field">
               <%=image_tag current_user.image.url, id: 'profile-pic-edit' %>
             </div>
 
@@ -54,12 +66,11 @@
 <script type="text/javascript">
     $(function () {
         var jscrop_api;
-
         $('#profile-pic-edit').Jcrop({
             onChange: update_crop,
             onSelect: update_crop,
-            boxWidth: 500,
-            boxHeight: 500,
+            boxWidth: getWindoWidth(),
+            boxHeight: getWindoWidth(),
             aspectRatio: 1,
             setSelect: [10, 10, 400, 400]
         }, function () {
