--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -104,17 +104,17 @@
 
       <div class="text-headline-form">
 
-        <div class="row">
+        <div class="">
           <%= f.label :text, 'Text' %>
         </div>
-        <div class="row">
+        <div class="">
           <%= f.text_area :text, rows: 4, 'data-parsley-required' => 'true' %>
         </div>
 
-        <div class="row">
+        <div class="">
           <%= f.label :headline, 'Headline' %>
         </div>
-        <div class="row">
+        <div class="">
           <%= f.text_field :headline, 'data-parsley-required' => 'true' %>
         </div>
 
