[Bug Fixed]: Get In touch Mail sending completed

--- a/app/views/campaign_mailer/get_in_touch_mail.html.erb
+++ b/app/views/campaign_mailer/get_in_touch_mail.html.erb
@@ -1,7 +1,6 @@
-<h4>Hi, <%= @user.full_name %></h4>
-<P>Your Brandreach account has been successfully activated</P>
-<p>Use following information for use your account</p>
-<p><strong>Email: <%= @user.email %></strong></p>
-<p><strong>Password: <%= @password %></strong></p>
+<p><strong>New Message From : </strong><%= @full_name %></p>
+<p><strong>Email Address : </strong><%= @email %></p>
+<p><strong>Phone Number : </strong><%= @phone_number %></p>
+<p><strong>Message is: </strong><%= @message %></p>
 
 
