--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -5,7 +5,7 @@
 <div class="brands-profile-page-wrapper">
 
   <%= render 'shared/show_errors', :object => @user%>
-  <%= image_tag(@user.profile_picture, :class => 'profile-picture center-block img-circle', :alt => 'profile-picture') %>
+  <%= image_tag(@user.profile_picture(:thumb), :class => 'profile-picture center-block img-circle', :alt => 'profile-picture') %>
 
   <%= form_for @user, url: profile_path(@user), html: {class: 'form-horizontal personal-info-form'} do |f| %>
 
