[Bug Fixed]: Update button made 100% at responsive design

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -329,4 +329,9 @@
     .street-address-textarea {
         margin-bottom: 7px;
     }
+
+    .btn-update {
+        width: 95%;
+        margin: 10px
+    }
 }
