--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -333,12 +333,22 @@
     }
 }
 
+@media (max-width: 992px) {
+    .personal-info-form .form-group {
+        margin-right: 20%;
+    }
+}
+
 
 @media (max-width: 768px) {
     .personal-info-without-fb label, .personal-info-without-fb input, .personal-info-without-fb select, .personal-info-without-fb .form-group textarea, .personal-info-without-fb .form-group textarea.short_bio {
         display: block;
         text-align: left;
         width: 100%;
+    }
+
+    .personal-info-form .form-group .textarea-label {
+        display: inline-block;
     }
 
     .street-address-textarea {
