change faq page footer

--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -38,6 +38,8 @@
     }
 </style>
 
+<% title 'faqs' %>
+
 <div class="wrapper-content faq-container">
   <div class="inner_bg" id="faq">
     <div class="mtop20">
