--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -77,8 +77,15 @@
         <ul class="nav navbar-nav my-nav-bar <%= user_signed_in? ? 'last-nav-item' : ''%>">
           <li><%= link_to 'INFLUENCERS', influencer_home_public_index_path, class: current_path(influencer_home_public_index_path) %></li>
           <li><%= link_to 'BRANDS', brand_home_public_index_path, class: current_path(brand_home_public_index_path) %></li>
-          <li id="about"><a href="#about_us">ABOUT US</a></li>
-          <li id="nav-contact-us"><a href="#contact_us">CONTACT US</a></li>
+
+          <% if params[:action] == 'faqs' || params[:controller] == 'sessions' %>
+              <li id="about"><a href="<%=influencer_home_public_index_path%>#about_us">ABOUT US</a></li>
+              <li id="nav-contact-us"><a href="<%=influencer_home_public_index_path%>#contact_us">CONTACT US</a></li>
+          <% else %>
+              <li id="about"><a href="#about_us">ABOUT US</a></li>
+              <li id="nav-contact-us"><a href="#contact_us">CONTACT US</a></li>
+          <% end %>
+
           <% if user_signed_in? %>
               <li class="visible-xs-inline"><a href="<%= faqs_public_index_path %>" class="<%= current_path(faqs_public_index_path) %>">FAQs</a></li>
               <li class="visible-xs-inline"><a href="<%= profile_profile_index_path %>">DASHBOARD</a></li>
