--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -119,9 +119,10 @@
         </div>
 
       </div>
-
-      <%= f.button 'BOOK NOW', class: 'btn btn-book-now' %>
-      <%= link_to 'CANCEL', explores_path, class: 'btn btn-book-now grey-color' %>
+      <div class="new-campaign-button-set">
+        <%= f.button 'BOOK NOW', class: 'btn btn-book-now' %>
+        <%= link_to 'CANCEL', explores_path, class: 'btn btn-book-now grey-color' %>
+      </div>
   <% end %>
 </div>
 
