--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1166,3 +1166,13 @@ h5, .h5 {
 .jcrop-keymgr{
   margin-left: -10000px !important;
 }
+.loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: image-url("page-loader.gif") 50% 50% no-repeat rgba(0, 0, 0, 0.1);
+  display: none;
+}
