[Bug Fixed]: 1. Added 1 day in campaign if there are no end date 2. Message date format changed

--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -335,7 +335,7 @@
 
     .comment-box .btn-accept {
         padding-left: 8px;
-        margin-left: 0;
+        margin-left: 2%;
     }
 
     .inbox-tab {
