--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1176,3 +1176,7 @@ h5, .h5 {
   background: image-url("page-loader.gif") 50% 50% no-repeat rgba(0, 0, 0, 0.1);
   display: none;
 }
+
+.display-inline {
+  display: inline;
+}
