--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -29,7 +29,6 @@
       <div class="col-md-12">
         <div class="social-account-tabs">
           <ul class="nav nav-tabs social-account-nav-tabs">
-            <!--<li class="active"><a data-toggle="tab" href="#fb_bhanu"><i class="social-account-fa-edit fa fa-facebook"></i> Bhanu Prasad</a></li>-->
           </ul>
 
           <div class="tab-content social-account-tab-content">
@@ -38,35 +37,35 @@
               <div id="costs" data-costs="<%= @costs %>"></div>
 
               <div class="form-group">
-                <%= f.label :facebook_account_id, 'Choose Social Account Name', class: 'control-label col-md-4' %>
-                <div class="col-sm-8">
+                <%= f.label :facebook_account_id, 'Choose Social Account Name', class: 'control-label' %>
+                <div class="display-inline">
                   <%= f.select :facebook_account_id, options_for_select(@influencer.active_facebook_accounts.map{ |account| [account.name, account.id] }, @campaign.facebook_account_id), {}, { :class => 'form-control type-of-post', :id => 'social_account' } %>
                 </div>
               </div>
 
               <div class="form-group">
-                <%= f.label :post_type, 'Choose the type of post', class: 'control-label col-md-4' %>
-                <div class="col-sm-8">
+                <%= f.label :post_type, 'Choose the type of post', class: 'control-label' %>
+                <div class="display-inline">
                   <%= f.select :post_type, options_for_select(Campaign.post_types.map{ |type, value| [type.titleize, value] }, Campaign.post_types[@campaign.post_type]), {}, { :class => 'form-control type-of-post', :id => 'post_type' } %>
                 </div>
               </div>
 
               <div class="form-group">
-                <%= f.label :cost, 'Cost', class: 'control-label col-md-4' %>
-                <div class="col-md-8">
+                <%= f.label :cost, 'Cost', class: 'control-label' %>
+                <div class="display-inline">
                   <%= f.text_field :cost, { class: 'form-control campaign-cost-input', value: @campaign.cost.present? ? @campaign.cost : @costs[0][0], readonly: true, id: 'post_cost' } %>
                 </div>
               </div>
 
               <div class="form-group">
-                <%= f.label '', 'Schedule Post', class: 'control-label col-md-4' %>
-                <div class="col-md-8">
-                  <div>
+                <%= f.label '', 'Schedule Post', class: 'control-label' %>
+                <div class="display-inline">
+                  <div class="display-inline">
                     <%= f.radio_button :schedule_type, 'daily', { :checked => true, class: 'daily' } %>
                     <span>Run my ad set continuously starting today</span>
                   </div>
 
-                  <div>
+                  <div class="display-inline">
                     <%= f.radio_button :schedule_type, 'date_range', class: 'date-range' %>
                     <span>Set a start and end date</span>
                   </div>
@@ -87,8 +86,8 @@
               </div>
 
               <div class="form-group">
-                <%= f.label :name, 'Enter Campaign Name', class: 'control-label col-md-4' %>
-                <div class="col-md-8">
+                <%= f.label :name, 'Enter Campaign Name', class: 'control-label' %>
+                <div class="display-inline">
                   <%= f.text_field :name, 'data-parsley-required' => 'true' %>
                 </div>
               </div>
