--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -87,7 +87,7 @@
 
               <div class="form-group">
                 <%= f.label :name, 'Enter Campaign Name', class: 'control-label' %>
-                <div class="display-inline">
+                <div class="display-inline campaign-name-input">
                   <%= f.text_field :name, 'data-parsley-required' => 'true' %>
                 </div>
               </div>
