--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -1,7 +1,7 @@
 
 <% title 'faqs' %>
 
-<div class="wrapper-content sticky-footer-wrapper faq-container">
+<div class="wrapper-content non-home-page-wrapper sticky-footer-wrapper faq-container">
   <div class="inner_bg" id="faq">
     <div class="mtop20">
       <div class="panel panel-warning">
