add terms and privacy policy page

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -765,6 +765,7 @@ ul.menu-item li {
 //faq, sign_in page style
 .non-home-page-wrapper{
   margin-top: 62px;
+  padding-bottom: 20px;
   padding-top: 62px;
 }
 
