--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -12,11 +12,11 @@
           <div class="row">
             <div class="col-md-12">
               <label for="category"> Category </label>
-              <%= select_tag :category, options_for_select(category_list), {id: 'explore-category', prompt: 'Select a Category'} %>
+              <%= select_tag :category, options_for_select(category_list), {id: ' explore-category', prompt: 'Select a Category'} %>
             </div>
 
             <div class="col-md-12">
-              <label for="Followers"> Likes </label>
+              <label for="Followers"> Followers </label>
               <%= select_tag 'followers', options_for_select(followers_drop_down), {id: 'explore-followers', prompt: 'Choose a range'} %>
             </div>
           </div>
@@ -44,8 +44,6 @@
             <div class="col-md-12">
               <label for="influencer_country"> Location </label>
               <%= country_select_tag :country, '', {:id => 'explore-country', prompt: 'Select Country'} %>
-              <br/>
-
               <div id="explore-state">
                 <select name="state">
                   <option value="">Select State</option>
