--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -142,8 +142,8 @@
   <script>
       $(document).ready(function () {
           var industry_list = document.getElementById("industry_list");
-          var awesomplete = new Awesomplete(industry_list);
-          awesomplete.list = ["Ada", "Java", "JavaScript", "Nascenia", "Oracle", "Google", "Ruby on Rails"];
+          var Industries = new Awesomplete(industry_list);
+          Industries.list = ["Intel", "IBM", "LinkedIn", "Nascenia", "Oracle", "Google", "Yahoo"];
       });
 
   </script>
