--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -63,7 +63,7 @@
 <div class="header">
 
   <div class="wrapper-content logo-container">
-    <%= image_tag('Logo.png', :class => 'logo', :alt => 'logo') %>
+    <a href="<%= root_path %>"><%= image_tag('Logo.png', :class => 'logo', :alt => 'logo test') %></a>
     <nav class="navbar">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" aria-expanded="true">
