[Bug Fixed]: Background Color changed from auto complete

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -142,7 +142,7 @@
   <script>
       $(document).ready(function () {
           var industry_list = document.getElementById("industry_list");
-          var Industries = new Awesomplete(industry_list);
+          var Industries = new Awesomplete(industry_list, {minChars: 0, sort: true});
           Industries.list = ["Intel", "IBM", "LinkedIn", "Nascenia", "Oracle", "Google", "Yahoo"];
       });
 
