--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -143,7 +143,8 @@
       $(document).ready(function () {
           var industry_list = document.getElementById("industry_list");
           var Industries = new Awesomplete(industry_list, {minChars: 0, sort: true});
-          Industries.list = ["Intel", "IBM", "LinkedIn", "Nascenia", "Oracle", "Google", "Yahoo"];
+          Industries.list = <%= raw(@industries)%>;
+          console.log("hi");
 
           $('#industry_list').on('focus', function() {
               Industries.evaluate();
