--- a/app/views/campaigns/new_brand_payment.html.erb
+++ b/app/views/campaigns/new_brand_payment.html.erb
@@ -4,7 +4,7 @@
 
 <div class="campaign-create-wrapper">
 
-  <%= form_for @campaign, url: create_brand_payment_campaigns_path, method: :patch, html: { class: 'form-horizontal'} do |f| %>
+  <%= form_for @campaign, url: create_brand_payment_campaigns_path, method: :patch, html: { class: 'form-horizontal'}, data: { parsley_validate: '' } do |f| %>
 
       <%= render 'shared/show_errors', :object => @campaign%>
 
@@ -16,7 +16,7 @@
           <%= f.label :card_number, 'Card number' %>
         </div>
         <div class="row">
-          <%= f.text_field :card_number, class: 'card-number'%>
+          <%= f.text_field :card_number, class: 'card-number', 'data-parsley-required' => 'true' %>
         </div>
 
         <div class="row">
@@ -31,7 +31,7 @@
           <%= f.label :card_holder_name, 'Cardholder name' %>
         </div>
         <div class="row">
-          <%= f.text_field :card_holder_name, class: 'card-holder-name' %>
+          <%= f.text_field :card_holder_name, class: 'card-holder-name', 'data-parsley-required' => 'true' %>
         </div>
 
         <%= f.hidden_field :id %>
