[Bug Fixed]:  Parsley Errors shows in inline in Card Payment page

--- a/app/assets/stylesheets/campaigns.css
+++ b/app/assets/stylesheets/campaigns.css
@@ -776,3 +776,7 @@ only screen and (max-width: 480px) {
     background-color: #f1b242;
 }
 
+.payment-form .parsley-errors-list {
+    display: inline;
+}
+
