correct handle bar custom function call

--- a/app/views/campaigns/_add_social_activity_modal.html.erb
+++ b/app/views/campaigns/_add_social_activity_modal.html.erb
@@ -23,7 +23,7 @@
                           </div>
 
                           <div class="media-left media-middle fb-activity-post">
-                            <h4 class="media-heading vertical-align-middle">{{truncate(story, 100)}}{{truncate(message, 100)}}</h4>
+                            <h4 class="media-heading vertical-align-middle">{{truncate story 100}}{{truncate message 100}}</h4>
                           </div>
 
                           {{#if picture}}
